--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.24.2</version>
+      <scope>test</scope>
+    </dependency>
+
+
     <!-- Lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
